--- a/dashboard.html
+++ b/dashboard.html
@@ -1,17 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Admin Dashboard</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <h1>Admin Dashboard</h1>
-  <ul>
-    <li>Clients: 0</li>
-    <li>Dispatch Fee: 10%</li>
-    <li>Tax Add-On: $500</li>
-    <li>Status: Internal Test Mode</li>
-  </ul>
-</body>
-</html>
+<ul>
+  <li>Clients: 1</li>
+  <li>Client 1: Test Driver 1 (Email: testdriver1@example.com)</li>
+  <li>Dispatch Fee: 10%</li>
+  <li>Tax Add-On: $500</li>
+  <li>Status: Internal Test Mode</li>
+</ul>
