--- a/dashboard.html
+++ b/dashboard.html
@@ -1,6 +1,13 @@
 <ul>
   <li>Clients: 1</li>
   <li>Client 1: Test Driver 1 (Email: testdriver1@example.com)</li>
+ <ul>
+  <li>Clients: 1</li>
+  <li>Client 1: Test Driver 1 (Email: testdriver1@example.com)</li>
+  <li>Dispatch Fee: 10%</li>
+  <li>Tax Add-On: $500</li>
+  <li>Status: Internal Test Mode</li>
+</ul>
   <li>Dispatch Fee: 10%</li>
   <li>Tax Add-On: $500</li>
   <li>Status: Internal Test Mode</li>
