--- a/dashboard.html
+++ b/dashboard.html
@@ -3,7 +3,7 @@
   <li>Client 1: Test Driver 1 (Email: testdriver1@example.com)</li>
  <ul>
  <li>Contracts:
-  <a href="Contract_A.pdf" target="_blank">Contract A</a>,
+  <a href="Contract_A.pdf" target="_blank">test driver contract</a>,
   <a href="Contract_B.pdf" target="_blank">Contract B</a>,
   <a href="Contract_C.pdf" target="_blank">Contract C</a>
 </li>
