--- a/dashboard.html
+++ b/dashboard.html
@@ -7,6 +7,11 @@
   <a href="Contract_B.pdf" target="_blank">Contract B</a>,
   <a href="Contract_C.pdf" target="_blank">Contract C</a>
 </li>
+   <li>
+  Upload Access: <strong id="uploadStatus">LOCKED</strong>
+</li>
+
+<button onclick="unlockUploads()">Unlock Uploads</button>
   <li>Dispatch Fee: 10%</li>
   <li>Tax Add-On: $500</li>
   <li>Status: Internal Test Mode</li>
