--- a/dashboard.html
+++ b/dashboard.html
@@ -16,3 +16,9 @@
   <li>Tax Add-On: $500</li>
   <li>Status: Internal Test Mode</li>
 </ul>
+<script>
+  function unlockUploads() {
+    document.getElementById("uploadStatus").innerText = "UNLOCKED";
+    alert("Uploads are now unlocked for this driver.");
+  }
+</script>
