--- a/dashboard.html
+++ b/dashboard.html
@@ -10,9 +10,11 @@
    <li>
   Upload Access: <strong id="uploadStatus">LOCKED</strong>
 </li>
-
-<button onclick="unlockUploads()">Unlock Uploads</button>
-  <li>Dispatch Fee: 10%</li>
+<li>
+  Upload Access: <strong id="uploadStatus">LOCKED</strong>
+</li>
+<button onclick="toggleUploads()">Toggle Upload Lock</button>
+<li>Dispatch Fee: 10%</li>
   <li>Tax Add-On: $500</li>
   <li>Status: Internal Test Mode</li>
 </ul>
