--- a/dashboard.html
+++ b/dashboard.html
@@ -20,7 +20,15 @@
 
   <h3>Contracts</h3>
   <ul>
-  
+  <li>
+      <a href="Contract_A.docx" target="_blank">Contract A</a>
+    </li>
+    <li>
+      <a href="Contract_B.docx" target="_blank">Contract B</a>
+    </li>
+    <li>
+      <a href="Contract_C.docx" target="_blank">Contract C</a>
+    </li>
   </ul>
 
   <h3>Upload Control</h3>
