--- a/dashboard.html
+++ b/dashboard.html
@@ -21,13 +21,12 @@
   <h3>Contracts</h3>
   <ul>
   <li>
-      <a href="Contract_A.docx" target="_blank">Contract A</a>
-    </li>
-    <li>
-      <a href="Contract_B.docx" target="_blank">Contract B</a>
-    </li>
-    <li>
-      <a href="Contract_C.docx" target="_blank">Contract C</a>
+    contract-a.docx
+contract-b.docx
+contract-c.docx
+   <a href="contract-a.docx">Contract A</a>
+<a href="contract-b.docx">Contract B</a>
+<a href="contract-c.docx">Contract C</a> 
     </li>
   </ul>
 
