--- a/dashboard.html
+++ b/dashboard.html
@@ -24,7 +24,7 @@
     contract-a.docx
 contract-b.docx
 contract-c.docx
-   <a href="contract-a.docx">Contract A</a>
+   <a href="Contract_A.pdf">Contract A</a>
 <a href="contract-b.docx">Contract B</a>
 <a href="contract-c.docx">Contract C</a> 
     </li>
