--- a/dashboard.html
+++ b/dashboard.html
@@ -25,7 +25,7 @@
 contract-b.docx
 contract-c.docx
    <a href="Contract_A.pdf">Contract A</a>
-<a href="contract-b.docx">Contract B</a>
+<a href="Contract_B.pdf">Contract B</a>
 <a href="contract-c.docx">Contract C</a> 
     </li>
   </ul>
