--- a/dashboard.html
+++ b/dashboard.html
@@ -26,7 +26,7 @@ contract-b.docx
 contract-c.docx
    <a href="Contract_A.pdf">Contract A</a>
 <a href="Contract_B.pdf">Contract B</a>
-<a href="contract-c.docx">Contract C</a> 
+<a href="Contract_C.pdf">Contract C</a> 
     </li>
   </ul>
 
