--- a/driver.html
+++ b/driver.html
@@ -30,7 +30,9 @@
 <p id="truckProfileStatus"></p>
   <button onclick="acceptLoad()">Accept Load</button>
 </div>
+<h3>Recommended Fuel Stops</h3>
 
+<ul id="fuelStopsList"></ul>
 <!-- ROUTE SECTION -->
 <div class="card">
   <h3>Fuel-Optimized Route</h3>
