--- a/driver.html
+++ b/driver.html
@@ -69,7 +69,10 @@
 <p id="factoringStatus"></p>
 
 <div id="factoringDetails"></div>
-
+<h3>CPA Export</h3>
+<button onclick="exportCPA()">Export Driver Data</button>
+<p id="exportStatus"></p>
+  
 <script>
 function acceptLoad() {
   document.getElementById("routeStatus").innerText =
