--- a/driver.html
+++ b/driver.html
@@ -72,6 +72,10 @@
 <h3>CPA Export</h3>
 <button onclick="exportCPA()">Export Driver Data</button>
 <p id="exportStatus"></p>
+<h3>Send Tax Paperwork & BOL to Me</h3>
+
+<button onclick="emailToMe()">Email to LeftDoorShutDispatch@gmail.com</button>
+<p id="emailStatus"></p>
   
 <script>
 function acceptLoad() {
