--- a/driver.html
+++ b/driver.html
@@ -6,7 +6,9 @@
 </head>
 
 <body>
-
+<header class="driver-header">
+  <img src="logo.png" alt="Left Door Shut Dispatch Logo" class="logo">
+</header>
 <h2>🚛 Driver Dashboard</h2>
 
 <!-- DRIVER INFO -->
