--- a/driver.html
+++ b/driver.html
@@ -1,3 +1,12 @@
+<div class="app-header">
+  <div class="logo-area">
+    <img src="assets/logo.png" alt="Left Door Shut Dispatch Logo">
+    <div class="user-role">Admin Portal</div>
+  </div>
+
+  <button class="logout-btn" onclick="logout()">Logout</button>
+</div>
+
 <!DOCTYPE html>
 <html>
 <head>
