--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
   <title>Left Door Shut Dispatch</title>
   <link rel="stylesheet" href="style.css">
 </head>
+  <script>
+function logout() {
+  alert("You have been logged out.");
+  window.location.href = "index.html";
+}
+</script>
 <body>
 
   <h1>Left Door Shut Dispatch</h1>
