--- a/driver.html
+++ b/driver.html
@@ -13,7 +13,12 @@
   <title>Driver Module</title>
   <link rel="stylesheet" href="style.css">
 </head>
-
+<script>
+function logout() {
+  alert("You have been logged out.");
+  window.location.href = "driver.html";
+}
+</script>
 <body>
 <header class="driver-header">
   <img src="logo.png" alt="Left Door Shut Dispatch Logo" class="logo">
