--- a/driver.html
+++ b/driver.html
@@ -1,7 +1,7 @@
 <div class="app-header">
   <div class="logo-area">
     <img src="assets/logo.png" alt="Left Door Shut Dispatch Logo">
-    <div class="user-role">Admin Portal</div>
+    <div class="user-role">Driver Portal</div>
   </div>
 
   <button class="logout-btn" onclick="logout()">Logout</button>
