--- a/driver.html
+++ b/driver.html
@@ -23,6 +23,42 @@ function logout() {
 <header class="driver-header">
   <img src="logo.png" alt="Left Door Shut Dispatch Logo" class="logo">
 </header>
+  <section class="driver-profile">
+  <h2>Driver Profile</h2>
+
+  <label>Driver Name</label>
+  <input type="text" id="driverName" placeholder="Enter your name">
+
+  <label>Truck Number</label>
+  <input type="text" id="truckNumber" placeholder="e.g. 457">
+
+  <label>Trailer Type</label>
+  <select id="trailerType">
+    <option value="">Select trailer</option>
+    <option>Dry Van</option>
+    <option>Reefer</option>
+    <option>Flatbed</option>
+    <option>Power Only</option>
+  </select>
+
+  <label>Factoring Company</label>
+  <select id="factoringCompany">
+    <option value="">Select factoring company</option>
+    <option>TBS Factoring</option>
+    <option>RTS Financial</option>
+    <option>Triumph Business Capital</option>
+    <option>OTR Capital</option>
+    <option>Other</option>
+  </select>
+
+  <label>Lumper Fee (Manual Entry)</label>
+  <input type="number" id="lumperFee" placeholder="$0.00">
+
+  <button onclick="saveDriverProfile()">Save Profile</button>
+
+  <p id="saveStatus"></p>
+</section>
+
 <h2>🚛 Driver Dashboard</h2>
 
 <!-- DRIVER INFO -->
