--- a/driver.html
+++ b/driver.html
@@ -1,119 +1,162 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Driver Portal | Left Door Shut Dispatch</title>
-  <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<title>Driver Portal | Left Door Shut Dispatch</title>
+
+<style>
+body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  background: #f2f4f7;
+  color: #222;
+}
+
+.header {
+  background: #ffffff;
+  padding: 15px 40px;
+  display: flex;
+  align-items: center;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.08);
+}
+
+.header img {
+  max-height: 80px;
+}
+
+.container {
+  max-width: 1200px;
+  margin: auto;
+  padding: 30px;
+}
+
+.card {
+  background: #ffffff;
+  padding: 20px;
+  margin-bottom: 25px;
+  border-radius: 10px;
+  box-shadow: 0 2px 10px rgba(0,0,0,0.06);
+}
+
+h2 {
+  margin-top: 0;
+}
+
+.notice {
+  background: #fff3cd;
+  border-left: 6px solid #f0ad4e;
+  padding: 15px;
+  margin-bottom: 20px;
+}
+
+label {
+  display: block;
+  margin-top: 10px;
+}
+
+input, select {
+  width: 100%;
+  padding: 8px;
+  margin-top: 5px;
+}
+
+button {
+  margin-top: 15px;
+  background: #2c3e50;
+  color: white;
+  border: none;
+  padding: 10px 16px;
+  border-radius: 6px;
+  cursor: pointer;
+}
+
+button:hover {
+  background: #1f2e3a;
+}
+
+.file-list {
+  font-size: 14px;
+  margin-top: 10px;
+}
+</style>
 </head>
+
 <body>
 
-<!-- ===== HEADER ===== -->
-<header class="main-header">
-  <img src="logo.png" alt="Left Door Shut Dispatch Logo" class="logo">
-  <div class="portal-title">Driver Portal</div>
-  <button class="logout-btn" onclick="logout()">Logout</button>
-</header>
+<div class="header">
+  <img src="logo.png" alt="Left Door Shut Dispatch Logo">
+</div>
 
-<!-- ===== DRIVER PROFILE ===== -->
-<section class="driver-profile">
-  <h2>Driver Profile</h2>
+<div class="container">
 
-  <label>Driver Name</label>
-  <input type="text" id="driverName">
+  <div class="notice">
+    <strong>IMPORTANT – RECEIPTS REQUIRED</strong><br>
+    All expenses must include a photo or receipt. Expenses without proof will not be filed.
+    Repeated issues may result in tax service removal.
+  </div>
 
-  <label>Truck Number</label>
-  <input type="text" id="truckNumber">
+  <div class="card">
+    <h2>Upload BOL / Proof of Delivery</h2>
+    <input type="file" multiple>
+    <div class="file-list">Files stack automatically and never overwrite.</div>
+  </div>
 
-  <label>Trailer Type</label>
-  <select id="trailerType">
-    <option value="">Select trailer</option>
-    <option>Dry Van</option>
-    <option>Reefer</option>
-    <option>Flatbed</option>
-    <option>Power Only</option>
-  </select>
+  <div class="card">
+    <h2>Driver Expenses (Per Load)</h2>
 
-  <label>Factoring Company</label>
-  <select id="factoringCompany">
-    <option value="">Select factoring company</option>
-    <option>TBS Factoring</option>
-    <option>RTS Financial</option>
-    <option>Triumph Business Capital</option>
-    <option>OTR Capital</option>
-    <option>Other</option>
-  </select>
+    <label>Load ID</label>
+    <input type="text">
 
-  <label>Lumper Fee (Manual Entry)</label>
-  <input type="number" id="lumperFee" placeholder="$0.00">
+    <label>Expense Type</label>
+    <select>
+      <option>Fuel</option>
+      <option>Reefer Fuel</option>
+      <option>Tolls</option>
+      <option>Lumper Fee</option>
+      <option>Maintenance / Repairs</option>
+      <option>Tires</option>
+      <option>Towing</option>
+      <option>Hotels (Breakdown)</option>
+      <option>Insurance</option>
+    </select>
 
-  <button onclick="saveDriverProfile()">Save Profile</button>
-  <p id="saveStatus"></p>
-</section>
+    <label>Amount ($)</label>
+    <input type="number">
 
-<!-- ===== CONTRACTS ===== -->
-<section class="contracts">
-  <h2>Contracts</h2>
-  <ul>
-    <li><a href="contracts/contract-a.html" target="_blank">Driver Contract</a></li>
-    <li><a href="contracts/contract-b.html" target="_blank">Power of Attorney (Optional)</a></li>
-    <li><a href="contracts/contract-c.html" target="_blank">Dispatch Agreement</a></li>
-  </ul>
-</section>
+    <label>Upload Receipt (Required)</label>
+    <input type="file" multiple>
 
-<!-- ===== UPLOAD ACCESS ===== -->
-<section class="uploads">
-  <h2>Upload Access</h2>
-  <p>Status: <strong id="uploadStatus">LOCKED</strong></p>
-  <button onclick="toggleUploads()">Toggle Upload Lock</button>
-</section>
+    <button>Add Expense</button>
+  </div>
 
-<!-- ===== JAVASCRIPT ===== -->
-<script>
-/* ===== LOGOUT ===== */
-function logout() {
-  alert("Logged out");
-  window.location.href = "index.html";
-}
+  <div class="card">
+    <h2>Business Expenses (Non-Load)</h2>
+    <select>
+      <option>GPS</option>
+      <option>Phone Bill</option>
+      <option>Mobile Internet</option>
+      <option>Dispatch Services</option>
+      <option>Laptop / Equipment</option>
+      <option>Office Supplies</option>
+    </select>
 
-/* ===== UPLOAD LOCK ===== */
-function toggleUploads() {
-  const status = document.getElementById("uploadStatus");
-  if (status.innerText === "LOCKED") {
-    status.innerText = "UNLOCKED";
-    alert("Uploads unlocked.");
-  } else {
-    status.innerText = "LOCKED";
-    alert("Uploads locked.");
-  }
-}
+    <input type="number" placeholder="Amount">
+    <input type="file" multiple>
+    <button>Add Business Expense</button>
+  </div>
 
-/* ===== SAVE DRIVER PROFILE ===== */
-function saveDriverProfile() {
-  const profile = {
-    name: document.getElementById("driverName").value,
-    truck: document.getElementById("truckNumber").value,
-    trailer: document.getElementById("trailerType").value,
-    factoring: document.getElementById("factoringCompany").value,
-    lumper: document.getElementById("lumperFee").value
-  };
+  <div class="card">
+    <h2>Tax Paperwork</h2>
+    <p>Uploads are automatically separated by year.</p>
+    <ul>
+      <li>Current Year</li>
+      <li>Next Year</li>
+      <li>Past Years (Read-Only)</li>
+    </ul>
+    <input type="file" multiple>
+  </div>
 
-  localStorage.setItem("driverProfile", JSON.stringify(profile));
-  document.getElementById("saveStatus").innerText = "Profile saved successfully.";
-}
-
-/* ===== LOAD DRIVER PROFILE SAFELY ===== */
-document.addEventListener("DOMContentLoaded", function () {
-  const savedProfile = localStorage.getItem("driverProfile");
-  if (savedProfile) {
-    const profile = JSON.parse(savedProfile);
-    document.getElementById("driverName").value = profile.name || "";
-    document.getElementById("truckNumber").value = profile.truck || "";
-    document.getElementById("trailerType").value = profile.trailer || "";
-    document.getElementById("factoringCompany").value = profile.factoring || "";
-    document.getElementById("lumperFee").value = profile.lumper || "";
-  }
-});
-</script>
+</div>
 
 </body>
 </html>
