--- a/driver.html
+++ b/driver.html
@@ -5,59 +5,75 @@
 <title>Driver Portal | Left Door Shut Dispatch</title>
 
 <style>
+/* ===== Body & Fonts ===== */
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
-  background: #e9edf2;
-  color: #1f2933;
+  font-size: 16px;
+  background: #2e3b46; /* Darker background outside cards */
+  color: #222;
 }
 
+/* ===== Header ===== */
 .header {
   background: #1f3a5f;
   padding: 15px 40px;
   display: flex;
   align-items: center;
+  justify-content: flex-start;
 }
 
 .header img {
-  max-height: 80px;
+  max-height: 150px; /* Logo resized */
 }
 
+/* ===== Container ===== */
 .container {
   max-width: 1200px;
   margin: auto;
-  padding: 30px;
+  padding: 20px 30px;
 }
 
+/* ===== Cards ===== */
 .card {
   background: #ffffff;
+  border: 6px solid #f7c948; /* Yellow border matches logo */
   padding: 20px;
   margin-bottom: 25px;
   border-radius: 10px;
   box-shadow: 0 3px 12px rgba(0,0,0,0.08);
 }
 
+/* ===== Headings ===== */
 h2 {
   margin-top: 0;
+  font-size: 1.5em;
   color: #1f3a5f;
 }
 
+/* ===== Notice ===== */
 .notice {
   background: #e8f0ff;
   border-left: 6px solid #1f3a5f;
   padding: 15px;
   margin-bottom: 20px;
+  font-size: 0.95em;
 }
 
+/* ===== Form Elements ===== */
 label {
   display: block;
   margin-top: 10px;
 }
 
-input, select {
+input[type="text"],
+input[type="number"],
+select,
+input[type="file"] {
   width: 100%;
   padding: 8px;
   margin-top: 5px;
+  box-sizing: border-box;
 }
 
 button {
@@ -78,34 +94,90 @@ button:hover {
   font-size: 14px;
   margin-top: 10px;
 }
+
+/* ===== Dynamic Expenses Rows ===== */
+.expense-row {
+  border-top: 1px solid #ccc;
+  padding-top: 10px;
+  margin-top: 10px;
+}
 </style>
 </head>
 
 <body>
 
+<!-- ===== Header ===== -->
 <div class="header">
   <img src="logo.png" alt="Left Door Shut Dispatch Logo">
 </div>
 
+<!-- ===== Container ===== -->
 <div class="container">
 
+  <!-- ===== Notice ===== -->
   <div class="notice">
     <strong>IMPORTANT – RECEIPTS REQUIRED</strong><br>
-    All expenses must include a photo or receipt. Expenses without proof will not be filed.
+    All expenses must include a photo/receipt. Amount cannot be entered until a receipt is uploaded.
+    Repeated issues may result in tax service removal.
   </div>
 
+  <!-- ===== BOL / Proof of Delivery ===== -->
   <div class="card">
     <h2>Upload BOL / Proof of Delivery</h2>
-    <input type="file" multiple>
-    <div class="file-list">Multiple files allowed. Files never overwrite.</div>
+    <input type="file" id="bolUpload" multiple>
+    <div class="file-list" id="bolList">Files stack automatically and never overwrite.</div>
   </div>
 
+  <!-- ===== Driver Expenses ===== -->
   <div class="card">
     <h2>Driver Expenses (Per Load)</h2>
+    <div id="expensesContainer"></div>
+    <button id="addExpenseBtn">Add New Expense</button>
+  </div>
 
-    <input type="text" placeholder="Load ID">
+  <!-- ===== Business Expenses ===== -->
+  <div class="card">
+    <h2>Business Expenses (Non-Load)</h2>
+    <div id="businessContainer"></div>
+    <button id="addBusinessBtn">Add New Business Expense</button>
+  </div>
 
-    <select>
+  <!-- ===== Tax Paperwork ===== -->
+  <div class="card">
+    <h2>Tax Paperwork</h2>
+    <p>Files are separated automatically by year (Current, Next, Past). Multiple files allowed.</p>
+    <input type="file" id="taxUpload" multiple>
+  </div>
+
+</div>
+
+<!-- ===== Background Music ===== -->
+<audio id="bgMusic" autoplay loop>
+  <source src="trucker_loop.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
+
+<!-- ===== Scripts ===== -->
+<script>
+// ===== BOL File Stacking =====
+const bolUpload = document.getElementById('bolUpload');
+const bolList = document.getElementById('bolList');
+bolUpload.addEventListener('change', () => {
+  let files = Array.from(bolUpload.files).map(f => f.name).join(', ');
+  bolList.innerText = "Uploaded: " + files;
+});
+
+// ===== Driver Expenses =====
+const expensesContainer = document.getElementById('expensesContainer');
+document.getElementById('addExpenseBtn').addEventListener('click', () => {
+  const div = document.createElement('div');
+  div.classList.add('expense-row');
+  div.innerHTML = `
+    <label>Load ID</label>
+    <input type="text">
+    
+    <label>Expense Type</label>
+    <select class="expenseType">
       <option>Fuel</option>
       <option>Reefer Fuel</option>
       <option>Tolls</option>
@@ -113,22 +185,56 @@ button:hover {
       <option>Maintenance / Repairs</option>
       <option>Tires</option>
       <option>Towing</option>
-      <option>Hotels</option>
+      <option>Hotels (Breakdown)</option>
       <option>Insurance</option>
     </select>
 
-    <input type="number" placeholder="Amount">
-    <input type="file" multiple>
-    <button>Add Expense</button>
-  </div>
+    <label>Upload Receipt (Required)</label>
+    <input type="file" class="receiptInput" multiple>
 
-  <div class="card">
-    <h2>Tax Paperwork</h2>
-    <p>Files are separated automatically by year.</p>
-    <input type="file" multiple>
-  </div>
+    <label>Amount ($)</label>
+    <input type="number" class="amountInput" disabled>
+  `;
+  expensesContainer.appendChild(div);
 
-</div>
+  // Enable amount input only if receipt uploaded
+  const receiptInput = div.querySelector('.receiptInput');
+  const amountInput = div.querySelector('.amountInput');
+  receiptInput.addEventListener('change', () => {
+    if (receiptInput.files.length > 0) {
+      amountInput.disabled = false;
+    } else {
+      amountInput.disabled = true;
+      amountInput.value = "";
+    }
+  });
+});
+
+// ===== Business Expenses =====
+const businessContainer = document.getElementById('businessContainer');
+document.getElementById('addBusinessBtn').addEventListener('click', () => {
+  const div = document.createElement('div');
+  div.classList.add('expense-row');
+  div.innerHTML = `
+    <label>Business Expense Type</label>
+    <select>
+      <option>GPS</option>
+      <option>Phone Bill</option>
+      <option>Mobile Internet</option>
+      <option>Dispatch Services</option>
+      <option>Laptop / Equipment</option>
+      <option>Office Supplies</option>
+    </select>
+
+    <label>Amount ($)</label>
+    <input type="number">
+
+    <label>Upload Receipt</label>
+    <input type="file" multiple>
+  `;
+  businessContainer.appendChild(div);
+});
+</script>
 
 </body>
 </html>
