--- a/driver.html
+++ b/driver.html
@@ -176,7 +176,7 @@ button {
 
 <!-- BACKGROUND AUDIO (ROYALTY-FREE) -->
 <audio autoplay loop controls style="width:100%;max-width:720px;margin:auto;display:block;">
-  <source src="trucker_loop.mp3" type="audio/mpeg">
+  <source src="suno_trucker_loop.mp3" type="audio/mpeg">
 </audio>
 
 <script>
